--- a/.github/workflows/test-lighthouse.yml
+++ b/.github/workflows/test-lighthouse.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: 🌤️ Warmup CloudFront Cache
         run: |
-          _ci/_utils/warmup.sh
+          _ci/_utils/warmup.sh ${{ github.ref_name == 'main' && 'prd' || 'stg' }}
 
       - name: 🔦 Lighthouse
         id: lighthouse
