--- a/_ci/perf/package.json
+++ b/_ci/perf/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "axe": "node axe/reporter.js",
-    "lh": "PSI_APIKEY=$PSI_APIKEY lighthouse --config-path=./lighthouse/.lighthouserc.mobile.cjs \"$URL\" --view --chrome-flags='--headless'",
-    "lh-d": "PSI_APIKEY=$PSI_APIKEY lighthouse --config-path=./lighthouse/.lighthouserc.desktop.cjs \"$URL\" --view --chrome-flags='--headless'",
-    "lhgh": "cd lighthouse && lighthouse --config-path=./.lighthouserc.mobile.cjs --chrome-flags='--headless'",
-    "lhgh-d": "cd lighthouse && lighthouse --config-path=./.lighthouserc.desktop.cjs --chrome-flags='--headless'",
+    "lh": "PSI_APIKEY=$PSI_APIKEY lighthouse --config-path=./lighthouse/.lighthouserc.mobile.js \"$URL\" --view --chrome-flags='--headless'",
+    "lh-d": "PSI_APIKEY=$PSI_APIKEY lighthouse --config-path=./lighthouse/.lighthouserc.desktop.js \"$URL\" --view --chrome-flags='--headless'",
+    "lhgh": "cd lighthouse && lighthouse --config-path=./.lighthouserc.mobile.js --chrome-flags='--headless'",
+    "lhgh-d": "cd lighthouse && lighthouse --config-path=./.lighthouserc.desktop.js --chrome-flags='--headless'",
     "psi": "psi",
     "psim": "psi http://stg.dgrebb.com --key=$(pass dg/keys/page-speed-insights) --prettyprint=true --strategy=mobile",
     "psid": "psi http://stg.dgrebb.com --key=$(pass dg/keys/page-speed-insights) --prettyprint=true --strategy=desktop"
@@ -17,8 +18,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "axe-core": "^4.7.2",
+    "axe-core": "^4.8.2",
     "axe-html-reporter": "^2.2.3",
-    "lighthouse": "^11.0.0"
+    "lighthouse": "^11.2.0"
   }
 }
