--- a/.github/ISSUE_TEMPLATE/FEATURE.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE.yml
@@ -1,6 +1,6 @@
 name: "✨ Feature"
 description: What are we building?
-title: "✨ [FEAT] - "
+title: "✨ [FEAT]: "
 labels: "feature"
 projects: "dgrebb.com"
 assignees:
