--- a/.github/ISSUE_TEMPLATE/PLAN.yml
+++ b/.github/ISSUE_TEMPLATE/PLAN.yml
@@ -1,6 +1,6 @@
 name: "🎬 Plan"
 description: What are we planning?
-title: "🎬 [PLAN] - "
+title: "🎬 [PLAN]: "
 labels: "feature"
 projects: "dgrebb.com"
 assignees:
