--- a/.github/workflows/test-lighthouse.yml
+++ b/.github/workflows/test-lighthouse.yml
@@ -85,7 +85,7 @@ jobs:
         if: always()
         uses: jakejarvis/s3-sync-action@master
         with:
-          args: --acl public-read --follow-symlinks --delete --exclude '*.cjs' --cache-control max-age=2853200,public
+          args: --acl public-read --follow-symlinks --delete --exclude '*.js' --cache-control max-age=2853200,public
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET_REPORTS }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
