--- a/_ci/perf/package.json
+++ b/_ci/perf/package.json
@@ -11,8 +11,8 @@
     "lhgh": "cd lighthouse && lighthouse --config-path=./.lighthouserc.mobile.js --chrome-flags='--headless'",
     "lhgh-d": "cd lighthouse && lighthouse --config-path=./.lighthouserc.desktop.js --chrome-flags='--headless'",
     "psi": "psi",
-    "psim": "psi http://stg.dgrebb.com --key=$(pass dg/keys/page-speed-insights) --prettyprint=true --strategy=mobile",
-    "psid": "psi http://stg.dgrebb.com --key=$(pass dg/keys/page-speed-insights) --prettyprint=true --strategy=desktop"
+    "psim": "psi http://stg.dgrebb.com/?roboto --key=$(pass dg/keys/page-speed-insights) --prettyprint=true --strategy=mobile",
+    "psid": "psi http://stg.dgrebb.com/?roboto --key=$(pass dg/keys/page-speed-insights) --prettyprint=true --strategy=desktop"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
   "devDependencies": {
     "axe-core": "^4.8.2",
     "axe-html-reporter": "^2.2.3",
-    "lighthouse": "^11.2.0"
+    "lighthouse": "11.0.0",
+    "psi": "^4.1.0"
   }
 }
