--- a/back/package.json
+++ b/back/package.json
@@ -1,18 +1,21 @@
 {
   "name": "cms.dgrebb.com",
-  "private": true,
   "version": "3.8.0",
+  "private": true,
   "description": "cms.dgrebb.com",
+  "license": "MIT",
+  "author": {
+    "name": "dgrebb"
+  },
   "scripts": {
-    "develop": "strapi develop",
-    "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi",
-    "postinstall": "patch-package"
+    "develop": "strapi develop",
+    "postinstall": "patch-package",
+    "start": "strapi start",
+    "strapi": "strapi"
   },
   "dependencies": {
     "@strapi/plugin-i18n": "4.14.5",
-    "@strapi/plugin-open-ai": "^1.0.1",
     "@strapi/plugin-sentry": "4.14.5",
     "@strapi/plugin-seo": "^1.9.4",
     "@strapi/plugin-users-permissions": "4.14.5",
@@ -20,16 +23,12 @@
     "@strapi/strapi": "4.14.5",
     "pg": "^8.11.3"
   },
-  "author": {
-    "name": "dgrebb"
+  "devDependencies": {
+    "patch-package": "8.0.0"
   },
-  "strapi": {},
   "engines": {
     "node": ">=16.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
-  "license": "MIT",
-  "devDependencies": {
-    "patch-package": "8.0.0"
-  }
+  "strapi": {}
 }
