--- a/.github/workflows/bdt-fe.yml
+++ b/.github/workflows/bdt-fe.yml
@@ -47,6 +47,7 @@ jobs:
       PUBLIC_API_PATH_CATEGORY: ${{ secrets.PUBLIC_API_PATH_CATEGORY }}
       PUBLIC_CATEGORY_PAGE_PARAMS: ${{ secrets.PUBLIC_CATEGORY_PAGE_PARAMS }}
       PUBLIC_API_PATH_CV_PAGE: ${{ secrets.PUBLIC_API_PATH_CV_PAGE }}
+      PUBLIC_API_PATH_POSITIONS: ${{ secrets.PUBLIC_API_PATH_POSITIONS }}
       API_KEY: ${{ secrets.API_KEY }}
       PUBLIC_SENTRY_DSN: ${{ secrets.PUBLIC_SENTRY_DSN }}
       PUBLIC_ENV: ${{ secrets.PUBLIC_ENV }}
