ci(back): updates content type and component view configurations (#994)
Closes: #994

--- a/back/config/sync/core-store.plugin_content_manager_configuration_components##cv.certification-dates.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_components##cv.certification-dates.json
@@ -7,7 +7,7 @@
       "filterable": true,
       "searchable": true,
       "pageSize": 10,
-      "mainField": "id",
+      "mainField": "date",
       "defaultSortBy": "id",
       "defaultSortOrder": "ASC"
     },
@@ -22,7 +22,7 @@
       },
       "date": {
         "edit": {
-          "label": "date",
+          "label": "Date",
           "description": "",
           "placeholder": "",
           "visible": true,
