--- a/back/config/sync/core-store.plugin_content_manager_configuration_components##shared.meta-social.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_components##shared.meta-social.json
@@ -22,7 +22,7 @@
       },
       "socialNetwork": {
         "edit": {
-          "label": "socialNetwork",
+          "label": "Social Network",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -36,7 +36,7 @@
       },
       "title": {
         "edit": {
-          "label": "title",
+          "label": "Title",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -50,7 +50,7 @@
       },
       "description": {
         "edit": {
-          "label": "description",
+          "label": "Description",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -64,7 +64,7 @@
       },
       "image": {
         "edit": {
-          "label": "image",
+          "label": "Image",
           "description": "",
           "placeholder": "",
           "visible": true,
