--- a/back/config/sync/core-store.plugin_content_manager_configuration_components##shared.seo.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_components##shared.seo.json
@@ -22,7 +22,7 @@
       },
       "metaTitle": {
         "edit": {
-          "label": "metaTitle",
+          "label": "Meta Title",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -36,7 +36,7 @@
       },
       "metaDescription": {
         "edit": {
-          "label": "metaDescription",
+          "label": "Meta Description",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -50,7 +50,7 @@
       },
       "metaImage": {
         "edit": {
-          "label": "metaImage",
+          "label": "Meta Image",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -64,7 +64,7 @@
       },
       "metaSocial": {
         "edit": {
-          "label": "metaSocial",
+          "label": "Meta Social",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -78,7 +78,7 @@
       },
       "keywords": {
         "edit": {
-          "label": "keywords",
+          "label": "Keywords",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -86,62 +86,6 @@
         },
         "list": {
           "label": "keywords",
-          "searchable": true,
-          "sortable": true
-        }
-      },
-      "metaRobots": {
-        "edit": {
-          "label": "metaRobots",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "metaRobots",
-          "searchable": true,
-          "sortable": true
-        }
-      },
-      "structuredData": {
-        "edit": {
-          "label": "structuredData",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "structuredData",
-          "searchable": false,
-          "sortable": false
-        }
-      },
-      "metaViewport": {
-        "edit": {
-          "label": "metaViewport",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "metaViewport",
-          "searchable": true,
-          "sortable": true
-        }
-      },
-      "canonicalURL": {
-        "edit": {
-          "label": "canonicalURL",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "canonicalURL",
           "searchable": true,
           "sortable": true
         }
@@ -163,10 +107,6 @@
           {
             "name": "metaDescription",
             "size": 4
-          },
-          {
-            "name": "keywords",
-            "size": 4
           }
         ],
         [
@@ -175,32 +115,14 @@
             "size": 6
           },
           {
-            "name": "canonicalURL",
-            "size": 6
+            "name": "keywords",
+            "size": 4
           }
         ],
         [
           {
             "name": "metaSocial",
             "size": 12
-          }
-        ],
-        [
-          {
-            "name": "metaRobots",
-            "size": 6
-          }
-        ],
-        [
-          {
-            "name": "structuredData",
-            "size": 12
-          }
-        ],
-        [
-          {
-            "name": "metaViewport",
-            "size": 6
           }
         ]
       ]
